-webkit-margin-collapse: separate doesn't work correctly for before margins https://bugs.webkit.org/show_bug.cgi?id=109956

Reviewed by David Hyatt.

Source/WebCore:

The collapsing code for "-webkit-margin-collapse: separate" assumed the margin value inside
marginInfo always contributes to the position of the child. This is valid only if the collapse
doesn't happen at the before side of the container. In that case, the child needs to be positioned
at the margin value specified in the style sheet.

Test: fast/block/margin-collapse/webkit-margin-collapse-separate-position.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::collapseMargins):

LayoutTests:

The test verifies a child specifying "-webkit-margin-collapse: separate" is correctly positioned inside
its container, at a value equal with the top margin of the child. The container also need to be sized
accordingly.

* fast/block/margin-collapse/webkit-margin-collapse-separate-position-expected.txt: Added.
* fast/block/margin-collapse/webkit-margin-collapse-separate-position.html: Added.


Canonical link: https://commits.webkit.org/128766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143617 268f45cc-cd09-0410-ab3c-d52691b4dbfc